--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^6.2.0",
     "hexo-all-minifier": "^0.5.7",
     "hexo-autoprefixer": "^2.0.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-front-matter": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -27,6 +28,7 @@
     "hexo-renderer-scss": "git+https://github.com/recursively/hexo-renderer-scss.git",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "npm": "^6.14.17"
   }
 }
