ci yml modified

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,15 @@ jobs:
 
       - name: Checkout theme repo
         uses: actions/checkout@v3
-        env:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-          GOOGLE_ENGINE_ID: ${{ secrets.GOOGLE_ENGINE_ID }}
         with:
           repository: ${{ env.THEME_REPO }}
           ref: ${{ env.THEME_BRANCH }}
           path: themes/Element
+
+      - name: Modify theme configuration
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          GOOGLE_ENGINE_ID: ${{ secrets.GOOGLE_ENGINE_ID }}
         run: |
           sed -i "s/googleApiKey/$GOOGLE_API_KEY/g" themes/Element/_config.yml
           sed -i "s/googleEngineId/$GOOGLE_ENGINE_ID/g" themes/Element/_config.yml
@@ -81,4 +83,3 @@ jobs:
         run: |
           npm run clean
           npm run deploy
-
