--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "hexo": "^6.2.0",
     "hexo-all-minifier": "^0.5.7",
+    "hexo-asset-img": "^1.0.0",
     "hexo-autoprefixer": "^2.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-front-matter": "^3.0.0",
