cache policy changed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.OS }}-npm-cache
+          key: ${{ runner.OS }}-npm-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.OS }}-npm-cache
+            ${{ runner.OS }}-npm-${{ hashFiles('package-lock.json') }}
 
       # SSH key
       - name: Add ssh private key
