--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Maxwell's blog
 subtitle: ''
-description: 'This is a pernonal blog for books and films'
+description: '这个人很懒'
 keywords:
 author: Maxwell
 language: en
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://nartifact.github.io
 # permalink: :year/:month/:day/:title/
 permalink: :title/
 permalink_defaults:
