--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,11 @@ jobs:
         env:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           GOOGLE_ENGINE_ID: ${{ secrets.GOOGLE_ENGINE_ID }}
+          GOOGLE_TRACKING_ID: ${{ secrets.TRACKING_ID }}
         run: |
           sed -i "s/googleApiKey/$GOOGLE_API_KEY/g" themes/Element/_config.yml
           sed -i "s/googleEngineId/$GOOGLE_ENGINE_ID/g" themes/Element/_config.yml
+          sed -i "s/trackingID/$GOOGLE_TRACKING_ID/g" themes/Element/_config.yml
 
       # Node env setup
       - name: Use node 18
