changed to algolia

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,12 @@ jobs:
       - name: Checkout LFS objects
         run: git lfs checkout
 
+      - name: Modify general configuration
+        env:
+          ALGOLIA_ADMIN_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
+        run: |
+          sed -i "s/algoliaAdminApiKey/$ALGOLIA_ADMIN_API_KEY/g" _config.yml
+
       - name: Checkout theme repo
         uses: actions/checkout@v3
         with:
@@ -44,14 +50,14 @@ jobs:
 
       - name: Modify theme configuration
         env:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-          GOOGLE_ENGINE_ID: ${{ secrets.GOOGLE_ENGINE_ID }}
+          # GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          # GOOGLE_ENGINE_ID: ${{ secrets.GOOGLE_ENGINE_ID }}
           GOOGLE_TRACKING_ID: ${{ secrets.TRACKING_ID }}
           BAIDU_SITEMAP_ID: ${{ secrets.BAIDU_SITEMAP_ID }}
           BAIDU_TRACKING_ID: ${{ secrets.BAIDU_TRACKING_ID }}
         run: |
-          sed -i "s/googleApiKey/$GOOGLE_API_KEY/g" themes/Element/_config.yml
-          sed -i "s/googleEngineId/$GOOGLE_ENGINE_ID/g" themes/Element/_config.yml
+          # sed -i "s/googleApiKey/$GOOGLE_API_KEY/g" themes/Element/_config.yml
+          # sed -i "s/googleEngineId/$GOOGLE_ENGINE_ID/g" themes/Element/_config.yml
           sed -i "s/trackingID/$GOOGLE_TRACKING_ID/g" themes/Element/_config.yml
           sed -i "s/baiduSitemapID/$BAIDU_SITEMAP_ID/g" themes/Element/_config.yml
           sed -i "s/baiduTrackingID/$BAIDU_TRACKING_ID/g" themes/Element/_config.yml
@@ -92,4 +98,5 @@ jobs:
       - name: Hexo deploy
         run: |
           npm run clean
+          hexo algolia
           npm run deploy
