--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^6.2.0",
+    "hexo-algoliasearch": "^1.0.0",
     "hexo-all-minifier": "^0.5.7",
     "hexo-asset-img": "^1.0.0",
     "hexo-autoprefixer": "^2.0.0",
