--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-all-minifier": "^0.5.7",
     "hexo-asset-img": "^1.0.0",
     "hexo-autoprefixer": "^2.0.0",
+    "hexo-azuresearch": "git+https://github.com/nartifact/hexo-azuresearch.git",
     "hexo-deployer-git": "^3.0.0",
     "hexo-front-matter": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
