--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,8 @@ jobs:
           # ALGOLIA_ADMIN_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
           AZURE_SEARCH_ADMIN_KEY: ${{ secrets.AZURE_SEARCH_ADMIN_KEY }}
         run: |
-          sed -i "s/algoliaAdminApiKey/$ALGOLIA_ADMIN_API_KEY/g" _config.
-          sed -i "s/azureSearchAdminKey/$AZURE_SEARCH_ADMIN_KEY/g" _config.
+          # sed -i "s/algoliaAdminApiKey/$ALGOLIA_ADMIN_API_KEY/g" _config.yml
+          sed -i "s/azureSearchAdminKey/$AZURE_SEARCH_ADMIN_KEY/g" _config.yml
 
       - name: Checkout theme repo
         uses: actions/checkout@v3
@@ -99,6 +99,8 @@ jobs:
 
       - name: Hexo deploy
         run: |
-          npm run clean
+          # npm run clean
+          # npm run deploy
+          # hexo algolia
+          hexo azuresearch
           npm run deploy
-          hexo algolia
